java command line args for JDK 9+ module exports